--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+    <title>今世缘景区欢迎您</title>
+    <link rel="shortcut icon" href="src/assets/image/favicon/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="app">
