:fire: :arrow_up: add fastclick & cahnge api

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <title>今世缘景区欢迎您</title>
-    <link rel="shortcut icon" href="src/assets/image/favicon/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./src/static/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="app">
         <router-view></router-view>
     </div>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.4"></script>
+    <script type="text/javascript" src="../static/lib/js/jquery-3.2.1.slim.min.js"></script>
   </body>
 </html>
