--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="keywords" content="今世缘 景区">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-touch-fullscreen" content="yes">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -10,6 +13,7 @@
     <link rel="shortcut icon" href="/static/logo/favicon.ico" type="image/x-icon" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="format-detection"content="telephone=no, email=no" />
+    <meta http-equiv="refresh" content="2000;url=http://www.baidu.com" />
   </head>
   <body>
     <div id="app">
